src/main/java/io/github/dsheirer/source/tuner/sdrplay/api/v3_07/sdrplay_api_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * const char *sdrplay_api_GetErrorString(sdrplay_api_ErrT err)
     * }
     */
    public static MemorySegment sdrplay_api_GetErrorString$address() {
        return sdrplay_api_GetErrorString.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *sdrplay_api_GetErrorString(sdrplay_api_ErrT err)
     * }
     */
    public static MemorySegment sdrplay_api_GetErrorString(int err) {
        var mh$ = sdrplay_api_GetErrorString.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_GetErrorString", err);
            }
            return (MemorySegment)mh$.invokeExact(err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_GetLastError {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_GetLastError");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrorInfoT *sdrplay_api_GetLastError(sdrplay_api_DeviceT *device)
     * }
     */
    public static FunctionDescriptor sdrplay_api_GetLastError$descriptor() {
        return sdrplay_api_GetLastError.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrorInfoT *sdrplay_api_GetLastError(sdrplay_api_DeviceT *device)
     * }
     */
    public static MethodHandle sdrplay_api_GetLastError$handle() {
        return sdrplay_api_GetLastError.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrorInfoT *sdrplay_api_GetLastError(sdrplay_api_DeviceT *device)
     * }
     */
    public static MemorySegment sdrplay_api_GetLastError$address() {
        return sdrplay_api_GetLastError.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrorInfoT *sdrplay_api_GetLastError(sdrplay_api_DeviceT *device)
     * }
     */
    public static MemorySegment sdrplay_api_GetLastError(MemorySegment device) {
        var mh$ = sdrplay_api_GetLastError.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_GetLastError", device);
            }
            return (MemorySegment)mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_DisableHeartbeat {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT    );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_DisableHeartbeat");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DisableHeartbeat()
     * }
     */
    public static FunctionDescriptor sdrplay_api_DisableHeartbeat$descriptor() {
        return sdrplay_api_DisableHeartbeat.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DisableHeartbeat()
     * }
     */
    public static MethodHandle sdrplay_api_DisableHeartbeat$handle() {
        return sdrplay_api_DisableHeartbeat.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DisableHeartbeat()
     * }
     */
    public static MemorySegment sdrplay_api_DisableHeartbeat$address() {
        return sdrplay_api_DisableHeartbeat.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DisableHeartbeat()
     * }
     */
    public static int sdrplay_api_DisableHeartbeat() {
        var mh$ = sdrplay_api_DisableHeartbeat.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_DisableHeartbeat");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_DebugEnable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_DebugEnable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DebugEnable(HANDLE dev, sdrplay_api_DbgLvl_t enable)
     * }
     */
    public static FunctionDescriptor sdrplay_api_DebugEnable$descriptor() {
        return sdrplay_api_DebugEnable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DebugEnable(HANDLE dev, sdrplay_api_DbgLvl_t enable)
     * }
     */
    public static MethodHandle sdrplay_api_DebugEnable$handle() {
        return sdrplay_api_DebugEnable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DebugEnable(HANDLE dev, sdrplay_api_DbgLvl_t enable)
     * }
     */
    public static MemorySegment sdrplay_api_DebugEnable$address() {
        return sdrplay_api_DebugEnable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_DebugEnable(HANDLE dev, sdrplay_api_DbgLvl_t enable)
     * }
     */
    public static int sdrplay_api_DebugEnable(MemorySegment dev, int enable) {
        var mh$ = sdrplay_api_DebugEnable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_DebugEnable", dev, enable);
            }
            return (int)mh$.invokeExact(dev, enable);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_GetDeviceParams {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_GetDeviceParams");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDeviceParams(HANDLE dev, sdrplay_api_DeviceParamsT **deviceParams)
     * }
     */
    public static FunctionDescriptor sdrplay_api_GetDeviceParams$descriptor() {
        return sdrplay_api_GetDeviceParams.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDeviceParams(HANDLE dev, sdrplay_api_DeviceParamsT **deviceParams)
     * }
     */
    public static MethodHandle sdrplay_api_GetDeviceParams$handle() {
        return sdrplay_api_GetDeviceParams.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDeviceParams(HANDLE dev, sdrplay_api_DeviceParamsT **deviceParams)
     * }
     */
    public static MemorySegment sdrplay_api_GetDeviceParams$address() {
        return sdrplay_api_GetDeviceParams.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDeviceParams(HANDLE dev, sdrplay_api_DeviceParamsT **deviceParams)
     * }
     */
    public static int sdrplay_api_GetDeviceParams(MemorySegment dev, MemorySegment deviceParams) {
        var mh$ = sdrplay_api_GetDeviceParams.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_GetDeviceParams", dev, deviceParams);
            }
            return (int)mh$.invokeExact(dev, deviceParams);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_Init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_Init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Init(HANDLE dev, sdrplay_api_CallbackFnsT *callbackFns, void *cbContext)
     * }
     */
    public static FunctionDescriptor sdrplay_api_Init$descriptor() {
        return sdrplay_api_Init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Init(HANDLE dev, sdrplay_api_CallbackFnsT *callbackFns, void *cbContext)
     * }
     */
    public static MethodHandle sdrplay_api_Init$handle() {
        return sdrplay_api_Init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Init(HANDLE dev, sdrplay_api_CallbackFnsT *callbackFns, void *cbContext)
     * }
     */
    public static MemorySegment sdrplay_api_Init$address() {
        return sdrplay_api_Init.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Init(HANDLE dev, sdrplay_api_CallbackFnsT *callbackFns, void *cbContext)
     * }
     */
    public static int sdrplay_api_Init(MemorySegment dev, MemorySegment callbackFns, MemorySegment cbContext) {
        var mh$ = sdrplay_api_Init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_Init", dev, callbackFns, cbContext);
            }
            return (int)mh$.invokeExact(dev, callbackFns, cbContext);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_Uninit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_Uninit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Uninit(HANDLE dev)
     * }
     */
    public static FunctionDescriptor sdrplay_api_Uninit$descriptor() {
        return sdrplay_api_Uninit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Uninit(HANDLE dev)
     * }
     */
    public static MethodHandle sdrplay_api_Uninit$handle() {
        return sdrplay_api_Uninit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Uninit(HANDLE dev)
     * }
     */
    public static MemorySegment sdrplay_api_Uninit$address() {
        return sdrplay_api_Uninit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Uninit(HANDLE dev)
     * }
     */
    public static int sdrplay_api_Uninit(MemorySegment dev) {
        var mh$ = sdrplay_api_Uninit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_Uninit", dev);
            }
            return (int)mh$.invokeExact(dev);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
